# lab-2-3

./: CMakeLists.txt  DynamicArray&List.h  Heap.h  ImmutableLinkedList.h  Queue.h  asserts.h  main  main.cpp  menu.h  task.h
